[gd_scene load_steps=4 format=3 uid="uid://djiaea87ivaeu"]

[ext_resource type="Script" path="res://scenes/objects/draggable_object.gd" id="1_bdjlm"]
[ext_resource type="Texture2D" uid="uid://c4usetd213xk0" path="res://icon.svg" id="2_30fw0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rxakp"]
radius = 59.0339

[node name="DraggableObject" type="Node2D"]
script = ExtResource("1_bdjlm")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_30fw0")

[node name="Area2D" type="Area2D" parent="Sprite2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/Area2D"]
shape = SubResource("CircleShape2D_rxakp")

[connection signal="area_entered" from="Sprite2D/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Sprite2D/Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="input_event" from="Sprite2D/Area2D" to="." method="_on_area_2d_input_event"]
